--- a/style.css
+++ b/style.css
@@ -1,20 +1,39 @@
 /* Tag selector to select the 'body' element */
 body {
+  background-color: #00b3e6
   /* Your code here! */
 }
 
 /* Tag selector to select all 'div' elements. We only have one 'div' in our HTML */
 div {
+  width: 700px;
+  margin: auto;
+  font-family: Helvetica Neue;
+  background: white;
+  padding: 30px;
   /* Your code here! */
 }
 
 /* ID selector to select the element with id 'main-header' */
 #main-header {
   /* Your code here! */
+  font-size: 22px;
   color:red;
 }
 
 /* Class selector to select elements containing the class 'perspective-questions' */
 .perspective-questions {
+  font-style: italic;
   /* Your code here! */
 }
+
+/* 
+width to 700px
+margin to auto (centers our element)
+font-family to "Helvetica Neue"
+background to white
+padding to 30px (creates an invisible space around the element)
+
+Set the element with the id of #main-header to a font-size of 22px
+Set the elements with the class of .perspective-questions to a font-style of italic
+ */
